--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,53 @@ body {
   /* font-family: 'Dancing Script', cursive; */
   font-family: "Montserrat", sans-serif;
   font-size: 62.5%;
-  overflow-x: hidden;
+}
+
+.freq-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  width: 100%;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73)), url("");
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+}
+.freq-header__heading {
+  font-size: 3rem;
+}
+
+.freq-main .freq-sect {
+  padding: 10em 2em;
+}
+.freq-main__card-graph {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  border-radius: 20px;
+  text-align: center;
+  background-color: #333;
+}
+.freq-main__card-graph--heading {
+  padding: 1em 1em;
+  font-size: 2.5rem;
+}
+.freq-main__card-graph--img {
+  display: block;
+  width: 100%;
+  height: auto;
+  padding: 2em 3em;
+  margin-bottom: 10em;
+}
+.freq-main__card-graph--text {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  padding: 1em 1em;
+  font-size: 2rem;
 }
 
 .nav {
@@ -39,6 +85,7 @@ body {
   display: none;
   transition: transform 0.3s;
   background-color: #e4e5e6;
+  z-index: 10;
 }
 .nav__items a {
   text-decoration: none;
