--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,5 +1,5 @@
+// @use './colors' as *;
 $headerGradient: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73));
-
 @mixin hero-img($gradient, $imgFile) {
 	background-image: $gradient, url($imgFile);
 	background-size: cover;
