--- a/scss/_frequency_style.scss
+++ b/scss/_frequency_style.scss
@@ -17,14 +17,70 @@
 }
 
 .freq-main {
-	// &__how-often-books {
-	// }
-	// &__how-often-schoolbooks {
-	// }
-	// &__how-many {
-	// }
-	// &__who-motivates {
-	// }
+	&__card {
+		position: relative;
+		margin: 4em 2em;
+		perspective: 1000px;
+
+		&:hover {
+			.freq-main__card--graph {
+				transform: rotateY(-180deg);
+				opacity: 0;
+			}
+			.freq-main__card--info {
+				transform: rotateY(0);
+				opacity: 1;
+			}
+		}
+
+		&--graph,
+		&--info {
+			// margin: 4em 2em;
+			text-align: center;
+			border-radius: 20px;
+			background-color: #333;
+			transition: transform 1s, opacity 1s;
+
+			&--heading {
+				padding: 1em;
+				font-size: 2.5rem;
+			}
+
+			&--img {
+				height: auto;
+				width: 100%;
+				max-height: 200px;
+				padding: 0 3em;
+				margin-bottom: 6em;
+			}
+
+			&--text {
+				
+				padding: 1em;
+				font-size: 2rem;
+			}
+		}
+
+		&--graph {
+			opacity: 1;
+
+			&--text {
+				position: absolute;
+				bottom: 0;
+				right: 0;
+			}
+		}
+
+		&--info {
+			position: absolute;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;
+			transform: rotateY(180deg);
+			opacity: 0;
+		}
+	}
 
 	.freq-sect {
 		position: relative;
@@ -33,13 +89,12 @@
 		.freq-sect:hover {
 			.freq-main__card-graph {
 				transform: rotateX(-180deg);
-                opacity: 0;
-			}	
+				opacity: 0;
+			}
 			.freq-main__card-info {
-                transform: rotateX(0);
-                opacity: 1;
-            }
-
+				transform: rotateX(0);
+				opacity: 1;
+			}
 		}
 	}
 
@@ -47,29 +102,29 @@
 		background-color: #666;
 		opacity: 1;
 
-        &--heading {
-            padding: 1em 1em;
-            font-size: 2.5rem;
-        }
+		&--heading {
+			padding: 1em 1em;
+			font-size: 2.5rem;
+		}
 
-        &--img {
-            display: block;
+		&--img {
+			display: block;
 			height: 400px;
-            width: 100%;
-            padding: 2em 3em;
-        }
+			width: 100%;
+			padding: 2em 3em;
+		}
 
-        &--text {
-            position: absolute;
-            bottom: 0;
-            right: 0;
-            padding: 1em 1em;
-            font-size: 2rem;
-        }
-
+		&--text {
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			padding: 1em 1em;
+			font-size: 2rem;
+		}
 	}
 
-	.freq-main__card-graph, .freq-main__card-info  {
+	.freq-main__card-graph,
+	.freq-main__card-info {
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -80,7 +135,7 @@
 		height: 700px;
 		width: 100%;
 		margin: 4em 0;
-        border-radius: 20px;
+		border-radius: 20px;
 		text-align: center;
 		perspective: 1000px;
 	}
@@ -96,8 +151,8 @@
 		}
 
 		&--text {
-            padding: 1em 1em;
-            font-size: 1rem;
-        }
+			padding: 1em 1em;
+			font-size: 1rem;
+		}
 	}
 }
