--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -3,9 +3,11 @@
 	margin: 0;
 	padding: 0;
 }
+html {
+	font-size: 62.5%;
+}
 
 body {
 	/* font-family: 'Dancing Script', cursive; */
 	font-family: 'Montserrat', sans-serif;
-	font-size: 62.5%;
 }
