--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ body {
   align-items: center;
   height: 50vh;
   width: 100%;
+  padding: 0 1em;
   text-align: center;
   background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73)), url("");
   background-size: cover;
@@ -148,6 +149,7 @@ body {
   align-items: center;
   height: 50vh;
   width: 100%;
+  padding: 0 1em;
   text-align: center;
   background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73)), url("");
   background-size: cover;
@@ -156,6 +158,187 @@ body {
 }
 .why-read-header__heading {
   font-size: 3rem;
+}
+
+.why-read-main__benefits {
+  padding: 8em 3em;
+}
+.why-read-main__benefits--heading {
+  padding: 1em 0;
+  text-align: center;
+  font-size: 2.5rem;
+}
+.why-read-main__benefits--box {
+  display: flex;
+  height: 100%;
+  position: relative;
+}
+.why-read-main__benefits--line {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 2px;
+  background-color: #000;
+}
+.why-read-main__benefits--list {
+  font-size: 2rem;
+  list-style: none;
+}
+.why-read-main__benefits--li-item {
+  padding: 0.5em 0;
+}
+.why-read-main__benefits--li-item i {
+  margin: 0 0.5em;
+}
+.why-read-main__encore {
+  padding: 0 3em 8em;
+  background-color: #333;
+}
+.why-read-main__encore--heading {
+  padding: 1em 0;
+  text-align: center;
+  font-size: 2.5rem;
+}
+.why-read-main__encore--cloud-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.why-read-main__encore--cloud {
+  display: flex;
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 30px;
+  min-width: 40px;
+  max-width: 220px;
+  min-height: 40px;
+  margin: 4em 0;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+.why-read-main__encore--cloud p {
+  font-size: 1.5rem;
+  z-index: 6;
+}
+.why-read-main__encore--cloud:before, .why-read-main__encore--cloud:after {
+  content: "";
+  background-color: #fff;
+  border-radius: 50%;
+  display: block;
+  position: absolute;
+  z-index: 5;
+}
+.why-read-main__encore--cloud:before {
+  width: 44px;
+  height: 44px;
+  top: -12px;
+  left: 28px;
+  box-shadow: -50px 30px 0 -12px #fff;
+}
+.why-read-main__encore--cloud:after {
+  bottom: -10px;
+  right: 26px;
+  width: 30px;
+  height: 30px;
+  box-shadow: 40px -34px 0 0 #fff, -28px -6px 0 -2px #fff, -24px 17px 0 -6px #fff, -5px 25px 0 -10px #fff;
+}
+
+.spec-info-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  width: 100%;
+  padding: 0 1em;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73)), url("");
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+}
+.spec-info-header__heading {
+  font-size: 3rem;
+}
+
+.spec-info-main__message-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3em 1em;
+  margin: 4em 1em;
+  background: url("http://forums.crackberry.com/attachments/blackberry-10-wallpapers-f308/137432d1361639896t-z10-wallpaper-set-z10-music.jpg");
+  border-radius: 10px;
+}
+.spec-info-main__message-box--bubble {
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  display: block;
+  background: #f5f5f5;
+  border-radius: 4px;
+  box-shadow: 2px 8px 5px #000;
+  position: relative;
+  margin-bottom: 2em;
+  z-index: 3;
+}
+.spec-info-main__message-box--alt {
+  margin-bottom: 2em;
+  margin: 0 0 2em 30px;
+}
+.spec-info-main__message-box--text {
+  padding: 8px 55px 8px 14px;
+}
+.spec-info-main__message-box--text--name {
+  font-weight: 600;
+  font-size: 12px;
+  margin: 0 0 4px;
+  color: #3498db;
+}
+.spec-info-main__message-box--text--alt {
+  color: #2ecc71;
+}
+.spec-info-main__message-box--text--message {
+  font-size: 12px;
+  margin: 0;
+  color: #2b2b2b;
+}
+.spec-info-main__message-box--text--timestamp {
+  font-size: 11px;
+  position: absolute;
+  bottom: 8px;
+  right: 10px;
+  text-transform: uppercase;
+  color: #999;
+}
+.spec-info-main__message-box--bubble-arrow {
+  position: absolute;
+  width: 0;
+  bottom: 42px;
+  left: -16px;
+  height: 0;
+}
+.spec-info-main__message-box--bubble-arrow::after {
+  content: "";
+  position: absolute;
+  border: 0 solid transparent;
+  border-top: 9px solid #f5f5f5;
+  border-radius: 0 20px 0;
+  width: 15px;
+  height: 30px;
+  transform: rotate(145deg);
+}
+.spec-info-main__message-box--arrow-alt {
+  right: -2px;
+  bottom: 40px;
+  left: auto;
+}
+.spec-info-main__message-box--arrow-alt::after {
+  transform: rotate(45deg) scaleY(-1);
 }
 
 .nav {
@@ -211,6 +394,7 @@ body {
   height: 100vh;
   width: 100%;
   z-index: 0;
+  padding: 0 1em;
 }
 .header__text-box {
   display: flex;
