--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,6 +7,7 @@
 @use './colors' as *;
 @use './frequency_style' as *;
 @use './why_you_read_style' as *;
+@use './specific_info_style' as *;
 
 //NAV
 .nav {
@@ -64,6 +65,7 @@
 	height: 100vh;
 	width: 100%;
 	z-index: 0;
+	padding: 0 1em;
 
 	&__text-box {
 		display: flex;
