--- a/css/style.css
+++ b/css/style.css
@@ -341,6 +341,134 @@ body {
   transform: rotate(45deg) scaleY(-1);
 }
 
+.favourites-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50vh;
+  width: 100%;
+  padding: 0 1em;
+  text-align: center;
+  background-image: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73)), url("");
+  background-size: cover;
+  background-position: center;
+  /* background-attachment: fixed; */
+}
+.favourites-header__heading {
+  font-size: 3rem;
+}
+
+.fav-main__question--heading {
+  text-align: center;
+  padding: 1em;
+  font-size: 2.5rem;
+}
+.fav-main__question--circle-box {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 3em;
+  overflow: hidden;
+}
+.fav-main__question--circle {
+  display: flex;
+  width: 30em;
+  height: 30em;
+  background-color: #333;
+  border-radius: 50%;
+  overflow: hidden;
+  transform: rotate(20deg);
+}
+.fav-main__question--yes, .fav-main__question--no {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  height: 300px;
+  background-color: blue;
+}
+.fav-main__question--yes p, .fav-main__question--no p {
+  font-size: 3rem;
+  font-weight: bold;
+  transform: rotate(-20deg);
+}
+.fav-main__question--yes {
+  text-align: center;
+  background-color: lime;
+  border-right: 2px solid black;
+}
+.fav-main__question--no {
+  text-align: center;
+  background-color: red;
+  border-left: 2px solid black;
+  width: 200%;
+}
+.fav-main__question--podium-box {
+  display: flex;
+  flex-direction: column;
+  padding: 3em;
+}
+.fav-main__question--podium {
+  display: flex;
+  flex-direction: row;
+  align-items: end;
+  justify-content: center;
+  padding: 10em 0 0;
+  overflow: hidden;
+}
+.fav-main__question--podium--item {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 100%;
+}
+.fav-main__question--podium--item p {
+  font-size: 4rem;
+}
+.fav-main__question--podium--item--book {
+  content: "";
+  position: absolute;
+  top: 3em;
+  width: 6em;
+  height: 9em;
+  background-color: #333;
+  transition: transform 0.3s;
+  z-index: -1;
+}
+.fav-main__question--podium--item1 {
+  background-color: tomato;
+  height: 10em;
+}
+.fav-main__question--podium--item2 {
+  background-color: lime;
+  height: 8em;
+}
+.fav-main__question--podium--item3 {
+  background-color: cyan;
+  height: 6em;
+}
+.fav-main__question--podium-btn {
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 2em;
+  padding: 0.5em 1em;
+  border-radius: 8px;
+  border: none;
+  font-size: 2rem;
+  background-color: lime;
+  color: #000;
+}
+
+.move-column {
+  transform: translateY(-13em);
+}
+
+.disabled {
+  background-color: #333;
+}
+
 .nav {
   display: flex;
   position: relative;
@@ -366,7 +494,6 @@ body {
   width: 100vw;
   height: 100vh;
   transform: translateX(100%);
-  display: none;
   transition: transform 0.3s;
   background-color: #e4e5e6;
   z-index: 10;
@@ -383,6 +510,7 @@ body {
 }
 .nav .show-nav {
   display: flex;
+  position: fixed;
   transform: translateX(0);
 }
 
