--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,4 +1,3 @@
-//1.Nawigacja nie ma animacji
 //2.usunac opisy z color
 //3. jak przesuniesz na iphone w dol to pod stupka widac tlo (tło na body)
 
@@ -8,8 +7,9 @@
 @use './frequency_style' as *;
 @use './why_you_read_style' as *;
 @use './specific_info_style' as *;
+@use './favourites_style' as *;
 
-//NAV
+//NAV 
 .nav {
 	display: flex;
 	position: relative;
@@ -28,6 +28,7 @@
 	}
 
 	&__items {
+		// position: absolute;
 		position: fixed;
 		display: flex;
 		flex-direction: column;
@@ -36,7 +37,6 @@
 		width: 100vw;
 		height: 100vh;
 		transform: translateX(100%);
-		display: none;
 		transition: transform 0.3s;
 		background-color: $main;
 		z-index: 10;
@@ -55,6 +55,7 @@
 
 	.show-nav {
 		display: flex;
+		position: fixed;
 		transform: translateX(0);
 	}
 }
