--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,3 +1,10 @@
-$main: #e4e5e6;  //prawie bialy taki bez nwm
+$main: #d4d4d4;  //prawie bialy taki bez nwm
 $secondary: #44406A;  //troche szary troche fioletowy 
 $footerColor: #0B0123; //stopkowy kolor
+$light: rgba(245, 246, 252, 0.8);
+$darkViolet: rgba(28, 0, 59, 0.9);
+
+
+$photoGradient: linear-gradient(0deg, rgba(28,0,59,.95) 26%, rgba(245,246,252,.9) 100%);
+$headerGradient: linear-gradient(0deg, rgba(28,0,59,.95) 5%, rgba(245,246,252,.9) 100%);
+$darkGradient: linear-gradient(to bottom, rgba(28, 0, 59, 0.8), #1c003bcc);
