--- a/scss/_frequency_style.scss
+++ b/scss/_frequency_style.scss
@@ -2,22 +2,12 @@
 @use './colors' as *;
 @use './reset' as *;
 
-.freq-header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 50vh;
-	width: 100%;
-	padding: 0 1em;
-	text-align: center;
-	@include hero-img($gradient: $headerGradient, $imgFile: '');
 
-	&__heading {
-		font-size: 3rem;
-	}
-}
 
 .freq-main {
+	padding: 4em 2em;
+	background-color: $main;
+
 	&__card {
 		position: relative;
 		margin: 4em 2em;
@@ -36,12 +26,12 @@
 
 		&--graph,
 		&--info {
-			// margin: 4em 2em;
 			text-align: center;
 			border-radius: 20px;
-			background-color: #333;
-			transition: transform 1s, opacity 1s;
-
+			background-color: $darkViolet;
+			transition: transform 1s, opacity .5s;
+			color: $main;
+ 
 			&--heading {
 				padding: 1em;
 				font-size: 2.5rem;
@@ -52,11 +42,13 @@
 				width: 100%;
 				max-height: 200px;
 				padding: 0 3em;
-				margin-bottom: 6em;
+				
+				&:last-of-type {
+					margin-bottom: 7em;
+				}
 			}
 
 			&--text {
-				
 				padding: 1em;
 				font-size: 2rem;
 			}
@@ -80,80 +72,18 @@
 			left: 0;
 			transform: rotateY(180deg);
 			opacity: 0;
-		}
-	}
+			background-color: $secondary;
 
-	.freq-sect {
-		position: relative;
-		padding: 10em 2em;
+			&--list {
+				&-item{
+					padding: 1em;
+					font-size: 1.8rem;
 
-		.freq-sect:hover {
-			.freq-main__card-graph {
-				transform: rotateX(-180deg);
-				opacity: 0;
+					i{
+						margin-right: 1em;
+					}
+				}
 			}
-			.freq-main__card-info {
-				transform: rotateX(0);
-				opacity: 1;
-			}
-		}
-	}
-
-	&__card-graph {
-		background-color: #666;
-		opacity: 1;
-
-		&--heading {
-			padding: 1em 1em;
-			font-size: 2.5rem;
-		}
-
-		&--img {
-			display: block;
-			height: 400px;
-			width: 100%;
-			padding: 2em 3em;
-		}
-
-		&--text {
-			position: absolute;
-			bottom: 0;
-			right: 0;
-			padding: 1em 1em;
-			font-size: 2rem;
-		}
-	}
-
-	.freq-main__card-graph,
-	.freq-main__card-info {
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		display: flex;
-		flex-direction: column;
-		height: 700px;
-		width: 100%;
-		margin: 4em 0;
-		border-radius: 20px;
-		text-align: center;
-		perspective: 1000px;
-	}
-
-	&__card-info {
-		background-color: #333;
-		opacity: 0;
-		// display: none;
-
-		&--heading {
-			padding: 1em 1em;
-			font-size: 2.5rem;
-		}
-
-		&--text {
-			padding: 1em 1em;
-			font-size: 1rem;
 		}
 	}
 }
