--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -1,8 +1,30 @@
-// @use './colors' as *;
-$headerGradient: linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 0, 59, 0.73));
+@use './colors' as *;
+
 @mixin hero-img($gradient, $imgFile) {
 	background-image: $gradient, url($imgFile);
 	background-size: cover;
 	background-position: center;
-	/* background-attachment: fixed; */
+	background-attachment: fixed; 
+}
+
+@mixin gradient($gradient, $imgFile) {
+	background-image: $gradient, url($imgFile);
+	background-size: cover;
+	background-position: center;
+}
+
+.small-header {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 40vh;
+	width: 100%;
+	padding: 0 1em;
+	text-align: center;
+	@include gradient($gradient: $headerGradient, $imgFile: '');
+
+	&__heading {
+		font-size: 3.5rem;
+		text-transform: uppercase;
+	}
 }
