--- a/scss/_specific_info_style.scss
+++ b/scss/_specific_info_style.scss
@@ -2,20 +2,6 @@
 @use './colors' as *;
 @use './reset' as *;
 
-.spec-info-header {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 50vh;
-	width: 100%;
-	padding: 0 1em;
-	text-align: center;
-	@include hero-img($gradient: $headerGradient, $imgFile: '');
-
-	&__heading {
-		font-size: 3rem;
-	}
-}
 
 .spec-info-main {
 	&__message-box {
@@ -25,7 +11,7 @@
 		align-items: center;
         padding: 3em 1em;
 		margin: 4em 1em;
-		background: url('http://forums.crackberry.com/attachments/blackberry-10-wallpapers-f308/137432d1361639896t-z10-wallpaper-set-z10-music.jpg');
+		@include hero-img($gradient: linear-gradient(to bottom, rgba(28, 0, 59, 0.6), #1b003b8c), $imgFile: 'http://forums.crackberry.com/attachments/blackberry-10-wallpapers-f308/137432d1361639896t-z10-wallpaper-set-z10-music.jpg');
         border-radius: 10px;
 
 		&--bubble {
@@ -50,18 +36,18 @@
 			padding: 8px 55px 8px 14px;
 			&--name {
 				font-weight: 600;
-				font-size: 12px;
+				font-size: 1.5rem;
 				margin: 0 0 4px;
-				color: #3498db;
+				color: rgb(189, 0, 189);
 			}
 			&--alt {
-				color: #2ecc71;
+				color: $darkViolet;
 			}
 
 			&--message {
 				font-size: 12px;
 				margin: 0;
-				color: #2b2b2b;
+				color: #000000;
 			}
 			&--timestamp {
 				font-size: 11px;
