--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,4 +1,4 @@
-$main: #d4d4d4;  //prawie bialy taki bez nwm
+$main: #ededed;  //prawie bialy taki bez nwm
 $secondary: #44406A;  //troche szary troche fioletowy 
 $footerColor: #0B0123; //stopkowy kolor
 $light: rgba(245, 246, 252, 0.8);
