--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,6 +9,7 @@
 @use "./why_you_read_style" as *;
 @use "./specific_info_style" as *;
 @use "./favourites_style" as *;
+@use "./media_queries" as *;
 
 //NAV
 .nav {
