--- a/css/style.css
+++ b/css/style.css
@@ -30,9 +30,30 @@ body {
   text-transform: uppercase;
 }
 
+.conclusions {
+  color: #ededed;
+  font-size: 1.5rem;
+  text-align: center;
+  background-color: #44406A;
+  border-radius: 20px;
+  padding: 2em 1em;
+  margin: 4em 2em;
+}
+.conclusions--heading {
+  text-transform: uppercase;
+  margin-bottom: 1em;
+}
+.conclusions--text {
+  display: flex;
+  flex-direction: column;
+}
+.conclusions--text p {
+  padding: 1em 0;
+}
+
 .freq-main {
   padding: 4em 2em;
-  background-color: #d4d4d4;
+  background-color: #ededed;
 }
 .freq-main__card {
   position: relative;
@@ -48,11 +69,12 @@ body {
   opacity: 1;
 }
 .freq-main__card--graph, .freq-main__card--info {
+  height: 100%;
   text-align: center;
   border-radius: 20px;
   background-color: rgba(28, 0, 59, 0.9);
   transition: transform 1s, opacity 0.5s;
-  color: #d4d4d4;
+  color: #ededed;
 }
 .freq-main__card--graph--heading, .freq-main__card--info--heading {
   padding: 1em;
@@ -97,25 +119,20 @@ body {
   margin-right: 1em;
 }
 
+.why-read-main {
+  padding: 3em 2em;
+}
 .why-read-main__benefits {
-  background-color: #44406A;
-  margin: 2em 1em;
+  background-color: rgba(28, 0, 59, 0.9);
+  margin-bottom: 2em;
   padding: 2em;
   border-radius: 20px;
 }
-.why-read-main__benefits--description {
-  color: #d4d4d4;
-  font-size: 1.5rem;
-  text-align: center;
-}
 .why-read-main__benefits--heading {
-  color: #d4d4d4;
+  color: #ededed;
   margin: 0.5em 0;
   text-align: center;
   font-size: 2.5rem;
-}
-.why-read-main__benefits--heading--description {
-  text-transform: uppercase;
 }
 .why-read-main__benefits--box {
   display: flex;
@@ -128,7 +145,7 @@ body {
   left: 0;
   bottom: 0;
   width: 3px;
-  background-color: #d4d4d4;
+  background-color: #ededed;
 }
 .why-read-main__benefits--list {
   font-size: 2rem;
@@ -137,7 +154,7 @@ body {
 .why-read-main__benefits--li-item {
   padding: 0.5em 0;
   margin-left: 0.5em;
-  color: #d4d4d4;
+  color: #ededed;
   transition: font-weight 0.5s;
 }
 .why-read-main__benefits--li-item i {
@@ -152,12 +169,12 @@ body {
 }
 .why-read-main__encore {
   padding: 2.5em;
-  background-color: #44406A;
-  margin: 2em 3em;
+  background-color: rgba(28, 0, 59, 0.9);
+  margin: 2em 0;
   border-radius: 20px;
 }
 .why-read-main__encore--heading {
-  color: #d4d4d4;
+  color: #ededed;
   text-align: center;
   font-size: 2.5rem;
   margin-bottom: 1em;
@@ -176,7 +193,7 @@ body {
   min-width: 40px;
   max-width: 220px;
   min-height: 40px;
-  margin: 4em 0;
+  margin: 3em;
   position: relative;
   align-items: center;
   justify-content: center;
@@ -209,6 +226,12 @@ body {
   box-shadow: 40px -34px 0 0 #fff, -28px -6px 0 -2px #fff, -24px 17px 0 -6px #fff, -5px 25px 0 -10px #fff;
 }
 
+.spec-info-main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .spec-info-main__message-box {
   display: flex;
   flex-direction: column;
@@ -216,6 +239,8 @@ body {
   align-items: center;
   padding: 3em 1em;
   margin: 4em 1em;
+  min-width: 27em;
+  max-width: 30em;
   background-image: linear-gradient(to bottom, rgba(28, 0, 59, 0.6), rgba(27, 0, 59, 0.5490196078)), url("http://forums.crackberry.com/attachments/blackberry-10-wallpapers-f308/137432d1361639896t-z10-wallpaper-set-z10-music.jpg");
   background-size: cover;
   background-position: center;
@@ -235,7 +260,6 @@ body {
   z-index: 3;
 }
 .spec-info-main__message-box--alt {
-  margin-bottom: 2em;
   margin: 0 0 2em 30px;
 }
 .spec-info-main__message-box--text {
@@ -254,14 +278,6 @@ body {
   font-size: 12px;
   margin: 0;
   color: #000000;
-}
-.spec-info-main__message-box--text--timestamp {
-  font-size: 11px;
-  position: absolute;
-  bottom: 8px;
-  right: 10px;
-  text-transform: uppercase;
-  color: #999;
 }
 .spec-info-main__message-box--bubble-arrow {
   position: absolute;
@@ -295,8 +311,9 @@ body {
   font-size: 2.5rem;
   border-radius: 20px;
   background-color: rgba(28, 0, 59, 0.9);
-  color: #d4d4d4;
+  color: #ededed;
   margin-bottom: 1em;
+  width: 100%;
 }
 .fav-main__question--circle-box {
   display: flex;
@@ -357,12 +374,12 @@ body {
 }
 .fav-main__question--podium--item p {
   font-size: 4rem;
-  color: #d4d4d4;
+  color: #ededed;
 }
 .fav-main__question--podium--item--book {
   content: "";
   position: absolute;
-  top: 3em;
+  top: 8em;
   width: 6em;
   height: 9em;
   background-color: #333;
@@ -370,6 +387,17 @@ body {
   z-index: -1;
   background-position: center;
   background-size: cover;
+}
+.fav-main__question--podium--item--book--text {
+  position: absolute;
+  top: -4em;
+  left: -8em;
+  right: -8em;
+}
+.fav-main__question--podium--item--book--text p {
+  font-size: 0.8rem;
+  color: #000;
+  text-align: center;
 }
 .fav-main__question--podium--item1 {
   background-color: rgb(28, 0, 59);
@@ -421,7 +449,7 @@ body {
 }
 
 .move-column {
-  transform: translateY(-13em);
+  transform: translateY(-18em);
 }
 
 .disabled {
@@ -430,6 +458,109 @@ body {
   cursor: auto;
 }
 
+@media (min-width: 992px) {
+  .wrapper {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
+  .small-header__heading {
+    font-size: 5rem;
+  }
+}
+@media (min-width: 768px) {
+  .header h1 {
+    font-size: 8rem;
+  }
+  .header p {
+    font-size: 2.5rem;
+  }
+  .fav-main__line {
+    margin: 6em 0;
+  }
+  .fav-main__question {
+    margin-top: 4em;
+    margin-bottom: 4em;
+  }
+  .fav-main__question--circle-box {
+    padding-top: 0;
+  }
+  .fav-main__question--circle {
+    margin-top: 4em;
+    width: 35em;
+    height: 35em;
+  }
+  .fav-main__question--yes, .fav-main__question--no {
+    width: 35em;
+    height: 35em;
+  }
+  .fav-main__question--no {
+    width: 220%;
+  }
+  .fav-main__question--podium-box {
+    margin-top: 8em;
+  }
+  .fav-main__question--podium {
+    padding-top: 25em;
+  }
+  .fav-main__question--podium--item--book {
+    width: 10em;
+    height: 16em;
+  }
+  .fav-main__question--podium--item--book--text p {
+    font-size: 1.3rem;
+  }
+  .move-column {
+    transform: translateY(-25em);
+  }
+  .why-read-main__encore--cloud-box {
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .why-read-main__encore--cloud {
+    width: 30%;
+  }
+  .spec-info-main__message-box {
+    width: 80%;
+    max-width: 80%;
+    align-items: start;
+    margin: 10em 0;
+  }
+  .spec-info-main__message-box--bubble {
+    width: 70%;
+    max-width: 40%;
+    margin-left: 3em;
+  }
+  .spec-info-main__message-box--alt {
+    margin-right: 3em;
+    margin-left: auto;
+  }
+  .spec-info-main__message-box--text--name {
+    font-size: 2rem;
+    margin: 0 0 0.8rem;
+  }
+  .spec-info-main__message-box--text--message {
+    font-size: 1.5rem;
+  }
+  footer p {
+    font-size: 1.5rem;
+    padding: 0.5em;
+  }
+}
+@media (min-width: 550px) {
+  .freq-main {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .freq-main__card {
+    width: 40em;
+    height: 100%;
+  }
+}
 .nav {
   position: relative;
 }
@@ -442,7 +573,7 @@ body {
   font-size: 3rem;
   border: none;
   border-radius: 30%;
-  background-color: rgba(212, 212, 212, 0.3);
+  background-color: rgba(237, 237, 237, 0.3);
   color: black;
   cursor: pointer;
   z-index: 10;
@@ -457,7 +588,7 @@ body {
   height: 100vh;
   transform: translateX(100%);
   transition: transform 0.3s;
-  background-color: #d4d4d4;
+  background-color: #ededed;
   z-index: 10;
 }
 .nav__items a {
@@ -503,7 +634,7 @@ body {
 
 .main .homepage {
   text-align: center;
-  background-color: #d4d4d4;
+  background-color: #ededed;
 }
 .main .homepage__about-us, .main .homepage__about-project, .main .homepage__about-form {
   padding: 8em 2em;
@@ -518,7 +649,7 @@ body {
 }
 .main .homepage__about-project {
   background-color: rgba(28, 0, 59, 0.9);
-  color: #d4d4d4;
+  color: #ededed;
   background-image: linear-gradient(to bottom, rgba(28, 0, 59, 0.8), rgba(28, 0, 59, 0.8)), url("../img/about-project-small.jpg");
   background-size: cover;
   background-position: center;
@@ -554,6 +685,6 @@ footer {
   text-align: center;
   background-color: rgba(28, 0, 59, 0.9);
   font-size: 1rem;
-  color: #d4d4d4;
+  color: #ededed;
   font-weight: bold;
 }/*# sourceMappingURL=style.css.map */
