--- a/scss/_favourites_style.scss
+++ b/scss/_favourites_style.scss
@@ -12,6 +12,7 @@
 			background-color: $darkViolet;
 			color: $main;
 			margin-bottom: 1em;
+			width: 100%;
 		}
 
 		&--circle-box {
@@ -87,14 +88,26 @@
 				&--book {
 					content: "";
 					position: absolute;
-					top: 3em;
+					top: 8em;
 					width: 6em;
 					height: 9em;
 					background-color: #333;
 					transition: transform 0.3s;
 					z-index: -1;
 					background-position: center;
-				background-size: cover;
+					background-size: cover;
+
+					&--text {
+						p {
+							font-size: .8rem;
+							color: #000;
+							text-align: center;
+						}
+						position: absolute;
+						top: -4em;
+						left: -8em;
+						right: -8em;
+					}
 				}
 			}
 
@@ -102,10 +115,10 @@
 				background-color: rgba(28, 0, 59, 1);
 				height: 10em;
 
-				&-book {		
-				background-image: url(../img/fav-book-1.png);
+				&-book {
+					background-image: url(../img/fav-book-1.png);
 				}
-				&-author{
+				&-author {
 					background-image: url(../img/andrzej_sapkowski.PNG);
 				}
 			}
@@ -117,7 +130,7 @@
 				&-book {
 					background-image: url(../img/fav-book-2.png);
 				}
-				&-author{
+				&-author {
 					background-image: url(../img/tolkien.jpg);
 				}
 			}
@@ -129,7 +142,7 @@
 				&-book {
 					background-image: url(../img/fav-book-3.png);
 				}
-				&-author{
+				&-author {
 					background-image: url(../img/gogol.jpg);
 				}
 			}
@@ -158,7 +171,7 @@
 }
 
 .move-column {
-	transform: translateY(-13em);
+	transform: translateY(-18em);
 }
 
 .disabled {
