--- a/scss/_frequency_style.scss
+++ b/scss/_frequency_style.scss
@@ -4,6 +4,7 @@
 
 
 
+
 .freq-main {
 	padding: 4em 2em;
 	background-color: $main;
@@ -26,6 +27,7 @@
 
 		&--graph,
 		&--info {
+			height: 100%;
 			text-align: center;
 			border-radius: 20px;
 			background-color: $darkViolet;
