--- a/scss/_specific_info_style.scss
+++ b/scss/_specific_info_style.scss
@@ -1,22 +1,32 @@
-@use './mixins' as *;
-@use './colors' as *;
-@use './reset' as *;
-
+@use "./mixins" as *;
+@use "./colors" as *;
+@use "./reset" as *;
 
 .spec-info-main {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+
 	&__message-box {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-        padding: 3em 1em;
+		padding: 3em 1em;
 		margin: 4em 1em;
-		@include hero-img($gradient: linear-gradient(to bottom, rgba(28, 0, 59, 0.6), #1b003b8c), $imgFile: 'http://forums.crackberry.com/attachments/blackberry-10-wallpapers-f308/137432d1361639896t-z10-wallpaper-set-z10-music.jpg');
-        border-radius: 10px;
+		min-width: 27em;
+		max-width: 30em;
+		@include hero-img(
+			$gradient: linear-gradient(to bottom, rgba(28, 0, 59, 0.6), #1b003b8c),
+			$imgFile:
+				"http://forums.crackberry.com/attachments/blackberry-10-wallpapers-f308/137432d1361639896t-z10-wallpaper-set-z10-music.jpg"
+		);
+		border-radius: 10px;
 
 		&--bubble {
 			width: 100%;
-            max-width: 200px;
+			max-width: 200px;
 			height: auto;
 			display: block;
 			background: #f5f5f5;
@@ -28,7 +38,6 @@
 		}
 
 		&--alt {
-			margin-bottom: 2em;
 			margin: 0 0 2em 30px;
 		}
 
@@ -49,14 +58,6 @@
 				margin: 0;
 				color: #000000;
 			}
-			&--timestamp {
-				font-size: 11px;
-				position: absolute;
-				bottom: 8px;
-				right: 10px;
-				text-transform: uppercase;
-				color: #999;
-			}
 		}
 
 		&--bubble-arrow {
@@ -67,7 +68,7 @@
 			height: 0;
 
 			&::after {
-				content: '';
+				content: "";
 				position: absolute;
 				border: 0 solid transparent;
 				border-top: 9px solid #f5f5f5;
