--- a/scss/_why_you_read_style.scss
+++ b/scss/_why_you_read_style.scss
@@ -3,27 +3,19 @@
 @use "./reset" as *;
 
 .why-read-main {
+	padding: 3em 2em;
+
 	&__benefits {
-		background-color: $secondary;
-		margin: 2em 1em;
+		background-color: $darkViolet;
+		margin-bottom: 2em;
 		padding: 2em;
 		border-radius: 20px;
 
-		&--description {
-			color: $main;
-			font-size: 1.5rem;
-			text-align: center;
-		}
-
 		&--heading {
 			color: $main;
-			margin: .5em 0;
+			margin: 0.5em 0;
 			text-align: center;
 			font-size: 2.5rem;
-
-			&--description {
-				text-transform: uppercase;
-			}
 		}
 
 		&--box {
@@ -54,13 +46,13 @@
 
 			i {
 				margin: 0 0.5em;
-				transition: margin .3s;
+				transition: margin 0.3s;
 			}
 
 			&:hover {
-				color: #fff; 
+				color: #fff;
 				i {
-					margin: 0 .2em 0 .8em;
+					margin: 0 0.2em 0 0.8em;
 				}
 			}
 		}
@@ -68,8 +60,8 @@
 
 	&__encore {
 		padding: 2.5em;
-		background-color: $secondary;
-		margin: 2em 3em;
+		background-color: $darkViolet;
+		margin: 2em 0;
 		border-radius: 20px;
 
 		&--heading {
@@ -80,12 +72,10 @@
 		}
 
 		&--cloud-box {
-			// background-color: #666;
 			display: flex;
 			flex-direction: column;
 			justify-content: space-between;
 			align-items: center;
-			// align-content: center;
 		}
 
 		&--cloud {
@@ -96,7 +86,7 @@
 			min-width: 40px;
 			max-width: 220px;
 			min-height: 40px;
-			margin: 4em 0;
+			margin: 3em;
 			position: relative;
 			align-items: center;
 			justify-content: center;
