--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -1,6 +1,5 @@
-$main: #ededed;  //prawie bialy taki bez nwm
-$secondary: #44406A;  //troche szary troche fioletowy 
-$footerColor: #0B0123; //stopkowy kolor
+$main: #ededed; 
+$secondary: #44406A;  
 $light: rgba(245, 246, 252, 0.8);
 $darkViolet: rgba(28, 0, 59, 0.9);
 
