--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -13,6 +13,39 @@
 	background-position: center;
 }
 
+.link {
+	position: relative;
+}
+
+.link,
+link::after,
+link::before {
+	transition: 0.3s;
+}
+
+.three::after,
+.three::before {
+	content: "";
+	position: absolute;
+	bottom: .5em;
+	width: 0px;
+	border-bottom: 2px solid $secondary;
+	transition: width 0.6s;
+}
+
+.three::before {
+	right: 50%;
+}
+
+.three::after {
+	left: 50%;
+}
+
+.three:hover::before,
+.three:hover::after {
+	width: 50%;
+}
+
 .small-header {
 	display: flex;
 	justify-content: center;
