--- a/css/style.css
+++ b/css/style.css
@@ -470,7 +470,7 @@ link::before {
   border-radius: 8px;
   border: none;
   font-size: 2rem;
-  background-color: #fff;
+  background-color: rgb(88, 254, 124);
   border: 1px solid black;
   color: #000;
   cursor: pointer;
