--- a/scss/_favourites_style.scss
+++ b/scss/_favourites_style.scss
@@ -156,7 +156,7 @@
 			border-radius: 8px;
 			border: none;
 			font-size: 2rem;
-			background-color: #fff;
+			background-color: rgb(88, 254, 124);
 			border: 1px solid black;
 			color: #000;
 			cursor: pointer;
